--- a/index.html
+++ b/index.html
@@ -4,9 +4,325 @@
   <meta charset="UTF-8">
   <meta name ="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
+    <link rel="stylesheet" href="Index.css">
 </head>
 <body>
-  <h1>Portfolio</h1>
-  <h2>Kobe Smits</h2>
+
+<nav>
+    <div class="logo">Portfolio WPL1</div>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#logboek">Logboek</a></li>
+        <li><a href="#ontwikkeling">Ontwikkeling</a></li>
+        <li><a href="#opdrachten">Opdrachten</a></li>
+        <li><a href="#reflectie">Reflectie</a></li>
+    </ul>
+</nav>
+
+<header id="home">
+    <div class="container">
+        <h1>Welkom op mijn Portfolio</h1>
+        <p><strong>4.1. Inleidende tekst</strong></p>
+        <p>
+            Mijn naam is Kobe en ik heet je van harte welkom op mijn online portfolio voor Werkplekleren 1.
+            Als student aan de opleiding Gegradueerde in het Programmeren is mijn passie voor codering en
+            software de grootste drijfveer achter mijn dagelijkse werkzaamheden. In dit portfolio
+            reflecteer ik uitgebreid op de projecten die ik het afgelopen semester heb uitgevoerd om mijn
+            leerproces zichtbaar te maken. Je vindt hier een helder overzicht van wat de verschillende
+            projecten precies inhielden en welke technische uitdagingen ik daarbij ben tegengekomen.
+            Naast de inhoudelijke beschrijvingen besteed ik veel aandacht aan hoe deze ervaringen mij
+            hebben gevormd als toekomstig programmeur. Het portfolio is zo opgebouwd dat het een
+            transparent beeld geeft van mijn groei op zowel technisch als persoonlijk vlak. Ik heb mijn
+            werkzaamheden gekoppeld aan de officiële competenties, zodat de link met het beroepsprofiel
+            van een ontwikkelaar duidelijk naar voren komt. Door kritisch terug te blikken op mijn
+            vorderingen, stel ik mijn doelen voor de komende periode van mijn opleiding scherp. Ik hoop
+            dat dit overzicht een goede indruk geeft van mijn inzet en mijn enthousiasme voor de wereld
+            van softwareontwikkeling. Veel plezier met het doornemen van mijn traject.
+        </p>
+    </div>
+</header>
+
+<main class="container">
+
+    <section id="logboek">
+        <h2>4.2. Logboek</h2>
+        <p>Hieronder vind je de planning van Werkplekleren 1, overgenomen van Blackboard.</p>
+        <div class="card">
+            <table>
+                <thead>
+                <tr>
+                    <th>Week</th>
+                    <th>Periode</th>
+                    <th>Inhoud</th>
+                    <th>Evaluaties</th>
+                    <th>Opdrachten</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>22/09 - 26/09</td>
+                    <td>Introductie werkplekleren, Wat is programmeren, Introductie POP, X-Factor & SDG’s, Introductie Scratch</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>29/09 - 03/10</td>
+                    <td>Oriënteringstraject, Installatie & Introductie Git & GitHub</td>
+                    <td>LockDownBrowser</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>06/10 - 10/10</td>
+                    <td>POP motivatie, kernkwadranten en reflecteren, Labo: Git & GitHub</td>
+                    <td></td>
+                    <td>Scratch</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>13/10 - 17/10</td>
+                    <td>POP planning & studieaanpak</td>
+                    <td>Git & GitHub</td>
+                    <td>Reflecteren</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>20/10 - 24/10</td>
+                    <td>Gastsprekers, EPOS reflectie oriënteringstraject</td>
+                    <td>Gastsprekers</td>
+                    <td>Planning</td>
+                </tr>
+                <tr>
+                    <td colspan="5"><em>Herfstvakantie</em></td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>03/11 - 07/11</td>
+                    <td>POP leren analyseren</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>10/11 - 14/11</td>
+                    <td>POP carrièrekompas, Feedback evaluatie</td>
+                    <td>C# Console</td>
+                    <td>POP carrièrekompas</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>17/11 - 21/11</td>
+                    <td>POP personal branding, Intro CV & Portfolio</td>
+                    <td></td>
+                    <td>Feedback C# Console</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>24/11 - 28/11</td>
+                    <td>Instroombevraging, Feedback evaluatie</td>
+                    <td>HTML & CSS</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>01/12 - 05/12</td>
+                    <td>Documenteren en debuggen in C#, Labo Debugging</td>
+                    <td>Debugging</td>
+                    <td>Feedback debugging</td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td>08/12 - 12/12</td>
+                    <td>Labo: WPF, Gastsprekers</td>
+                    <td>SDG’s</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>15/12 - 19/12</td>
+                    <td>POP kernkwadranten, Afwerken CV & Labo WPF</td>
+                    <td></td>
+                    <td>Curriculum Vitae</td>
+                </tr>
+                <tr>
+                    <td colspan="5"><em>Kerstvakantie</em></td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td>05/01 - 09/01</td>
+                    <td>Infosessie Thalento</td>
+                    <td>C# WPF</td>
+                    <td>Portfolio</td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td>12/01 - 16/01</td>
+                    <td>Introductie Corda, Feedback C# WPF</td>
+                    <td>Inhaalmoment</td>
+                    <td></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+
+    <section id="ontwikkeling">
+        <h2>4.3. Ontwikkeling</h2>
+
+        <h3>4.3.1. Keuze voor de opleiding</h3>
+        <p><strong>Waarom programmeren?</strong> (100-200 woorden)</p>
+        <p>
+            Ik heb voor de opleiding programmeren gekozen omdat de passie voor IT er eigenlijk altijd al is geweest. Al in het middelbaar twijfelde ik heel erg tussen mijn toenmalige studie en een richting in de IT. Destijds heb ik een andere keuze gemaakt, maar de interesse in software en codering is nooit weggegaan. Na mijn middelbare school ben ik eerst gaan werken, maar tijdens die werkervaring merkte ik dat ik mijn passie voor technologie miste. Ik vond het tijd om eindelijk iets te gaan doen wat ik echt leuk vind. Daarom heb ik de knoop doorgehakt om alsnog voor deze opleiding te kiezen. Ik wil nu de kans grijpen om alles te leren over het bouwen van software en van mijn hobby mijn beroep te maken. Het voelt als de juiste stap om nu vol voor het programmeren te gaan.
+        </p>
+        <p><strong>Waarom dit beroep?</strong> (100-200 woorden)</p>
+        <p>
+            Ik geloof dat een toekomst in de IT goed bij mij past, omdat ik door mijn werkervaring heb geleerd wat het betekent om hard te werken en verantwoordelijkheid te nemen. Doorzetten wanneer iets niet meteen lukt is voor mij vanzelfsprekend geworden, en die mindset neem ik mee in mijn ontwikkeling als programmeur. Programmeren vraagt geduld, focus en logisch denken, en juist die combinatie spreekt mij enorm aan. Ik merk dat ik zeer geconcentreerd kan blijven wanneer ik met code bezig ben, omdat het onderwerp mij oprecht interesseert. Waar ik vroeger twijfelde over mijn richting, weet ik nu zeker dat ik graag programmeer en haal ik veel voldoening uit het oplossen van complexe puzzels en het stap voor stap bouwen van een werkend programma. Daarnaast leer ik graag bij; in de IT-sector sta je nooit stil, en dat zie ik als een kans om mezelf continu te verbeteren. Met mijn motivatie, doorzettingsvermogen en leergierigheid ben ik dan ook vastberaden om mezelf te ontwikkelen tot een bekwame programmeur.
+        </p>
+
+        <h3>4.3.2 & 4.3.3. Competenties & Situering</h3>
+        <p>Hieronder staan de OLR's en mijn huidige status per rol.</p>
+        <table>
+            <thead>
+            <tr>
+                <th>OLR</th>
+                <th>Omschrijving</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td colspan="2"><strong>Rol: Ontwerper</strong></td>
+            </tr>
+            <tr>
+                <td>OLR1</td>
+                <td>De gegradueerde bereidt de realisatie van een softwareproject voor.</td>
+            </tr>
+            <tr>
+                <td>OLR2</td>
+                <td>
+                    De gegradueerde maakt op basis van de analyse een onderbouwd voorstel voor:
+                    <ul>
+                        <li>het ontwerp</li>
+                        <li>de programmeertaal</li>
+                        <li>de methodiek</li>
+                    </ul>
+                    De gegradueerde stemt het voorstel af met de softwareontwikkelaar, analist en/of projectleider.
+                </td>
+            </tr>
+
+            <tr>
+                <td colspan="2"><strong>Rol: Programmeur</strong></td>
+            </tr>
+            <tr>
+                <td>OLR3</td>
+                <td>De gegradueerde realiseert softwareapplicaties en gegevensstructuren. De gegradueerde werkt hierbij planmatig binnen de context van het projectplan, de beschikbare tools en de vooropgestelde methodiek.</td>
+            </tr>
+            <tr>
+                <td>OLR4</td>
+                <td>De gegradueerde is medeverantwoordelijk voor de eigen digitale werkomgeving en draagt bij tot de gedeelde infrastructuur die nodig is voor het ontwikkelen, testen en in productie brengen van projecten.</td>
+            </tr>
+            <tr>
+                <td>OLR5</td>
+                <td>De gegradueerde programmeert softwaretoepassingen volgens de standaarden en afspraken binnen de organisatie.</td>
+            </tr>
+            <tr>
+                <td>OLR6</td>
+                <td>De gegradueerde gaat in overleg met de softwareontwikkelaar, analist en/of projectleider na of het opgeleverde product onderhoud en/of aanpassingen nodig heeft. De gegradueerde voert het onderhoud en de aanpassingen projectmatig uit.</td>
+            </tr>
+
+            <tr>
+                <td colspan="2"><strong>Rol: Tester</strong></td>
+            </tr>
+            <tr>
+                <td>OLR7</td>
+                <td>De gegradueerde gaat volgens testscenario’s de werking en functionaliteit van de gerealiseerde code na en verbetert deze op basis van feedback van de softwareontwikkelaar, analist, projectleider en/of gebruikers.</td>
+            </tr>
+
+            <tr>
+                <td colspan="2"><strong>Rol: Communicator / Teamspeler</strong></td>
+            </tr>
+            <tr>
+                <td>OLR8</td>
+                <td>De gegradueerde werkt constructief en actief samen in een multidisciplinair team en participeert actief tijdens overlegmomenten. De gegradueerde zoekt mee naar oplossingen om problemen te vermijden.</td>
+            </tr>
+            <tr>
+                <td>OLR9</td>
+                <td>De gegradueerde communiceert en rapporteert efficiënt over het geleverde werk, aangepast aan het doelpubliek en gebruikt hiervoor het gepaste Engelstalige vakjargon.</td>
+            </tr>
+            <tr>
+                <td>OLR10</td>
+                <td>De gegradueerde documenteert de zelf ontwikkelde applicaties op een adequate manier en geeft kwalitatieve input voor de gebruikershandleidingen en referentiegidsen.</td>
+            </tr>
+
+            <tr>
+                <td colspan="2"><strong>Rol: Levenslang lerende IT-professional</strong></td>
+            </tr>
+            <tr>
+                <td>OLR11</td>
+                <td>De gegradueerde onderhoudt zijn deskundigheidsniveau door relevante duurzame IT- en maatschappelijke ontwikkelingen actief op te volgen.</td>
+            </tr>
+            <tr>
+                <td>OLR12</td>
+                <td>De gegradueerde is zelfkritisch, ontwikkelt de nodige zelfkennis en gebruikt deze om zijn persoonlijke en professionele groei te bevorderen.</td>
+            </tr>
+            <tr>
+                <td>OLR13</td>
+                <td>De gegradueerde handelt deontologisch en duurzaam, en houdt rekening met de veiligheids- en privacyrichtlijnen.</td>
+            </tr>
+            </tbody>
+        </table>
+        <div class="role-grid">
+            <div class="role-card">
+                <h4>Rol: Ontwerper (OLR 1 & 2)</h4>
+                <p><em>Situering:</em> Wat lukt al goed? Wat nog niet?</p>
+                <h5>4.3.4 Voorbeelden:</h5>
+                <ul>
+                    <li>Voorbeeld 1: Beschrijving + motivatie</li>
+                    <li>Voorbeeld 2: ...</li>
+                    <li>Voorbeeld 3: ...</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section id="opdrachten">
+        <h2>4.4. Opdrachten</h2>
+        <div class="assignment">
+            <h3>POP-opdracht</h3>
+            <p><strong>Beschrijving:</strong> ...</p>
+            <p><strong>Uitdagingen:</strong> ...</p>
+            <p><strong>Bijgeleerd:</strong> ...</p>
+        </div>
+    </section>
+
+    <section id="reflectie">
+        <h2>4.5. Reflectie</h2>
+
+        <div class="aim-reflectie">
+            <h3>4.5.1. AIM-reflectie</h3>
+            <p><strong>Intro:</strong> Context van de periode.</p>
+            <p><strong>A (Aangenaam):</strong> Wat was positief?</p>
+            <p><strong>I (Interessant):</strong> Nieuwe inzichten?</p>
+            <p><strong>M (Minder aangenaam):</strong> Wat was lastig?</p>
+            <p><strong>Succes:</strong> Waar ben je trots op?</p>
+        </div>
+
+        <h3>4.5.2. Kernkwadranten</h3>
+        <div class="kernkwadrant">
+            <p>Mijn kernkwaliteit: [Kwaliteit]</p>
+            <p>Mijn valkuil: [Valkuil]</p>
+        </div>
+
+        <h3>4.5.3. X-factor</h3>
+        <p>Passie, Empathie, Ondernemingszin en Innovatie...</p>
+    </section>
+
+</main>
+
+<footer>
+    <p>&copy; 2026 - Kobe Smits - PXL Werkplekleren 1</p>
+</footer>
+
 </body>
 </html>
